--- a/CSharpProj.csproj
+++ b/CSharpProj.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="MySql.Data" Version="8.0.27" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Repositories\" />
+  </ItemGroup>
+
 </Project>
